fix: Prevent avatar to shrink on small screens.

--- a/src/blocks/hero/hero.styl
+++ b/src/blocks/hero/hero.styl
@@ -10,7 +10,7 @@
   background-image url('../images/overlay.png'), url('../images/bg.jpg')
   background-position top left, top left
   background-repeat repeat, no-repeat
-  background-size auto, auto 100%
+  background-size auto, contain
   @media (min-width 992px)
     position fixed
     top 0
@@ -35,7 +35,8 @@
     width 10rem
     height @width
     margin-top 1rem
-    overflow: hidden;
+    overflow hidden
+    flex-shrink 0
     img
       width 100%
       height 100%
